--- a/src/notes/02vue/vue3.0/10.md
+++ b/src/notes/02vue/vue3.0/10.md
@@ -87,57 +87,7 @@ app.component("blog-post", {
 app.mount("#app");
 ```
 
-:::
-
-:::snippet 单个根元素
-
-> 使用了`JavaScript`的模板字符串来让多行的模板更易读。<br>
-> 它们在`IE`下并没有被支持，所以如果你需要在不 (经过`Babel`或`TypeScript`之类的工具) 编译的情况下支持`IE`，请使用折行转义字符取而代之。
-
-```html
-<script src="https://unpkg.com/vue@next"></script>
-<div id="blog-post-root-demos">
-  <blog-post
-    v-for="post in posts"
-    v-bind:key="post.id"
-    v-bind:post="post"
-  ></blog-post>
-</div>
-```
-
-```javascript
-Vue.component("blog-post", {
-  props: ["post"],
-  template: `
-    <div class="blog-post">
-      <h3>{{ post.title }}</h3>
-      <div v-html="post.content"></div>
-    </div>
- `,
-});
-let blogPostRootDemo = new Vue({
-  el: "#blog-post-root-demos",
-  data: {
-    posts: [
-      {
-        id: 1,
-        title: "博客Vue",
-        content: "vue 学习笔记",
-      },
-      {
-        id: 2,
-        title: "简书Vue",
-        content: "简书 学习笔记",
-      },
-      {
-        id: 3,
-        title: "github",
-        content: "git 学习笔记",
-      },
-    ],
-  },
-});
-```
+> 2.x 需要单个根元素，3.0 不在限制
 
 :::
 
@@ -148,23 +98,44 @@ let blogPostRootDemo = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="blog-posts-events-demos" class="demos">
-  <blog-post-event
+<div id="app" class="demos">
+  <blog-post
     :style="{ fontSize: postFontSize + 'em',width: widthSize+'px', height: heightSize+'px',
-          background: colorValue}"
-    v-for="post in posts"
+                background: colorValue}"
     v-bind:key="post.id"
     v-bind:post="post"
     v-on:parent-font="postFontSize += 0.2;"
     v-on:parent-style="widthSize += $event;"
     v-on:parent-styles="widthSize += $event[0];heightSize += $event[1];"
     v-on:parent-style-fun="parentStyleFun"
-  ></blog-post-event>
+  >
+  </blog-post>
 </div>
 ```
 
 ```javascript
-Vue.component("blog-post-event", {
+const app = Vue.createApp({
+  data() {
+    return {
+      post: {
+        id: 1,
+        title: "博客Vue",
+        content: "vue 学习笔记",
+      },
+      postFontSize: 1,
+      widthSize: 400,
+      heightSize: 160,
+      colorValue: "red",
+    };
+  },
+  methods: {
+    parentStyleFun: function(enlargeAmount, enlargeAmount1) {
+      this.heightSize += enlargeAmount;
+      this.widthSize += enlargeAmount1;
+    },
+  },
+});
+app.component("blog-post", {
   props: ["post"],
   template: `
     <div class="blog-post">
@@ -185,38 +156,7 @@ Vue.component("blog-post-event", {
     </div>
  `,
 });
-let blogPostsEventsDemo = new Vue({
-  el: "#blog-posts-events-demos",
-  data: {
-    posts: [
-      {
-        id: 1,
-        title: "博客Vue",
-        content: "vue 学习笔记",
-      },
-      {
-        id: 2,
-        title: "简书Vue",
-        content: "简书 学习笔记",
-      },
-      {
-        id: 3,
-        title: "gitfun",
-        content: "git 学习笔记",
-      },
-    ],
-    postFontSize: 1,
-    widthSize: 400,
-    heightSize: 160,
-    colorValue: "red",
-  },
-  methods: {
-    parentStyleFun: function(enlargeAmount, enlargeAmount1) {
-      this.heightSize += enlargeAmount;
-      this.widthSize += enlargeAmount1;
-    },
-  },
-});
+app.mount("#app");
 ```
 
 :::
@@ -224,37 +164,71 @@ let blogPostsEventsDemo = new Vue({
 :::snippet 自定义事件也可以用于创建支持`v-model`的自定义输入组件
 
 ```html
+<input v-model="searchText" />
+等价于
+<input :value="searchText" @input="searchText = $event.target.value" />
+```
+
+```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="custom-input-demos">
-  custom-input
-  <br />
+<div id="app">
+  <h2>customText</h2>
   <custom-input v-model="customText"></custom-input>
   {{customText}}
-  <br />
-  input
-  <br />
-  <input v-model="searchText" />
-  {{searchText}}
+  <h2>customText2</h2>
+  <custom-input
+    :model-value="customText2"
+    @update:model-value="customText2 = $event"
+  ></custom-input>
+  {{customText2}}
+  <h2>computedText 计算属性重构</h2>
+  <computed-input v-model="computedText"></computed-input>
+  {{computedText}}
+  <h2>inputText</h2>
+  <input v-model="inputText" />
+  {{inputText}}
 </div>
 ```
 
 ```javascript
-Vue.component("custom-input", {
-  props: ["value"],
+const app = Vue.createApp({
+  data() {
+    return {
+      inputText: "",
+      customText: "",
+      customText2: "",
+      computedText: "",
+      computedText2: "",
+    };
+  },
+  methods: {},
+});
+app.component("custom-input", {
+  props: ["modelValue"],
   template: `
     <input
-      v-bind:value="value"
-      v-on:input="$emit('input', $event.target.value)"
+      :value="modelValue"
+      @input="$emit('update:modelValue', $event.target.value)"
     >
- `,
+  `,
 });
-let customInputDemo = new Vue({
-  el: "#custom-input-demos",
-  data: {
-    customText: "",
-    searchText: "",
+app.component("computed-input", {
+  props: ["modelValue"],
+  template: `
+    <input v-model="value">
+  `,
+  computed: {
+    value: {
+      get() {
+        return this.modelValue;
+      },
+      set(value) {
+        this.$emit("update:modelValue", value);
+      },
+    },
   },
 });
+app.mount("#app");
 ```
 
 :::
@@ -263,7 +237,7 @@ let customInputDemo = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="alert-box-demos">
+<div id="app" class="demo">
   <alert-box>
     Something bad happened.
   </alert-box>
@@ -298,7 +272,7 @@ let alertBoxDemo = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="dynamic-component-demos">
+<div id="app" class="demo">
   <button
     v-for="tab in tabs"
     v-bind:key="tab"
@@ -312,30 +286,44 @@ let alertBoxDemo = new Vue({
 ```
 
 ```javascript
-Vue.component("tab-home", {
-  template: "<div>home componet</div>",
-});
-Vue.component("tab-house", {
-  template: "<div>house componet</div>",
-});
-Vue.component("tab-family", {
-  template: "<div>family componet</div>",
-});
-let dynamicComponentDemo = new Vue({
-  el: "#dynamic-component-demos",
-  data: {
-    currentTab: "Home",
-    tabs: ["home", "house", "family"],
+const app = Vue.createApp({
+  data() {
+    return {
+      currentTab: "Home",
+      tabs: ["Home", "Posts", "Archive"],
+    };
   },
   computed: {
-    currentTabComponent: function() {
+    currentTabComponent() {
       return "tab-" + this.currentTab.toLowerCase();
     },
   },
 });
+
+app.component("tab-home", {
+  template: `<div class="demo-tab">Home component</div>`,
+});
+app.component("tab-posts", {
+  template: `<div class="demo-tab">Posts component</div>`,
+});
+app.component("tab-archive", {
+  template: `<div class="demo-tab">Archive component</div>`,
+});
+app.mount("#app");
 ```
 
 ```css
+.demo {
+  font-family: sans-serif;
+  border: 1px solid #eee;
+  border-radius: 2px;
+  padding: 20px 30px;
+  margin-top: 1em;
+  margin-bottom: 40px;
+  user-select: none;
+  overflow-x: auto;
+}
+
 .tab-button {
   padding: 6px 10px;
   border-top-left-radius: 3px;
@@ -352,7 +340,7 @@ let dynamicComponentDemo = new Vue({
 .tab-button.active {
   background: #e0e0e0;
 }
-.tab {
+.demo-tab {
   border: 1px solid #ccc;
   padding: 10px;
 }
