--- a/src/notes/02vue/vue3.0/11.md
+++ b/src/notes/02vue/vue3.0/11.md
@@ -4,7 +4,7 @@
 2. 使用`PascalCase`(首字母大写命名)`MyComponentName`<br/>
 3. 直接在`DOM`(即非字符串的模板) 中使用时只有`kebab-case`是有效的。<br/>
 
-> 建议 使用`kebab-case`。强烈推荐遵循`W3C`规范中的自定义组件名 (字母全小写且必须包含一个连字符)
+> 当直接在 DOM 中使用一个组件建议 使用`kebab-case`。强烈推荐遵循`W3C`规范中的自定义组件名 (字母全小写且必须包含一个连字符)
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
@@ -15,13 +15,16 @@
 ```
 
 ```javascript
-Vue.component("my-component-name", {
-  /* ... */
+const app = Vue.createApp({
 });
-Vue.component("MyComponentName", {
+
+app.component('my-component-name', {
   /* ... */
-});
-let app = new Vue({ el: "#app" });
+})
+app.component('MyComponentName', {
+  /* ... */
+})
+app.mount('#app')
 ```
 
 :::
@@ -30,7 +33,7 @@ let app = new Vue({ el: "#app" });
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="component-global">
+<div id="app">
   <component-a></component-a>
   <component-b></component-b>
   <component-c></component-c>
@@ -38,16 +41,19 @@ let app = new Vue({ el: "#app" });
 ```
 
 ```javascript
-Vue.component("component-a", {
+const app = Vue.createApp({})
+
+app.component('component-a', {
   /* ... */
-});
-Vue.component("component-b", {
+})
+app.component('component-b', {
   /* ... */
-});
-Vue.component("component-c", {
+})
+app.component('component-c', {
   /* ... */
-});
-let componentGlobal = new Vue({ el: "#component-global" });
+})
+
+app.mount('#app')
 ```
 
 :::
@@ -56,7 +62,7 @@ let componentGlobal = new Vue({ el: "#component-global" });
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="component-local">
+<div id="app">
   <component-a></component-a>
   <component-b></component-b>
   <component-c></component-c>
@@ -74,13 +80,14 @@ var ComponentC = {
   /* ... */
 };
 
-let componentLocal = new Vue({
-  el: "#component-local",
+const app = Vue.createApp({
   components: {
-    "component-a": ComponentA,
-    "component-b": ComponentB
+    'component-a': ComponentA,
+    'component-b': ComponentB,
+    'component-c': ComponentC
   }
-});
+})
+app.mount('#app')
 ```
 
 > 局部注册的组件在其子组件中不可用。例如，如果你希望`ComponentA`在`ComponentB`中可用，则你需要这样写
@@ -93,114 +100,35 @@ let componentLocal = new Vue({
 ```
 
 ```javascript
-var componentA = {
+const ComponentA = {
   /* ... */
-};
+}
 
-var componentB = {
+const ComponentB = {
   components: {
-    "componentA": componentA
+    'component-a': ComponentA
   }
   // ...
-};
-let componentLocalSub = new Vue({
-  el: "#component-local-sub",
+}
+const app = Vue.createApp({
   components: {
-    "componentB": componentB
+    'component-b': ComponentB
   }
-});
+})
+app.mount('#app')
 ```
 
-局部组件实例
-
-```html
-<script src="https://unpkg.com/vue@next"></script>
-<div id="component-local-demos"></div>
-```
+> `Babel`和`webpack`使用`ES2015`模块
 
 ```javascript
-let componentA = {
-  data: function() {
-    return {
-      count: 0
-    };
-  },
-  template:
-    '<button v-on:click="count++">You clicked me {{ count}} times.</button>'
-};
-let componentLocalDemo = new Vue({
-  el: "#component-local-demos",
-  components: {
-    componentA: componentA
-  },
-  template: "<componentA></componentA>"
-});
-```
-
-:::
-
-:::snippet 在模块系统中局部注册
-
-1. `Babel`和`webpack`使用`ES2015`模块
-2. 在`ES2015+`中，在对象中放一个类似`ComponentA`的变量名其实是`ComponentA: ComponentA`的缩写
-3. 这个变量名同时是：用在模板中的自定义元素的名称，包含了这个组件选项的变量名
-4. 在一个假设的`ComponentB.js`或`ComponentB.vue`文件中
-5. 现在`ComponentA`和`ComponentC`都可以在`ComponentB`的模板中使用了。
-
-```javascript
-import ComponentA from "./ComponentA";
-import ComponentC from "./ComponentC";
+import ComponentA from './ComponentA.vue'
 
 export default {
   components: {
-    ComponentA,
-    ComponentC
+    ComponentA
   }
   // ...
-};
-```
-
-:::
-
-:::snippet 基础组件的自动化全局注册
-
-应用入口文件 (比如`src/main.js`) 中全局导入基础组件的示例代码
-
-```javascript
-import Vue from "vue";
-import upperFirst from "lodash/upperFirst";
-import camelCase from "lodash/camelCase";
-
-const requireComponent = require.context(
-  // 其组件目录的相对路径
-  "./components",
-  // 是否查询其子目录
-  false,
-  // 匹配基础组件文件名的正则表达式
-  /Base[A-Z]\w+\.(vue|js)$/
-);
-
-requireComponent.keys().forEach(fileName => {
-  // 获取组件配置
-  const componentConfig = requireComponent(fileName);
-
-  // 获取组件的 PascalCase 命名
-  const componentName = upperFirst(
-    camelCase(
-      // 剥去文件名开头的`./`和结尾的扩展名
-      fileName.replace(/^\.\/(.*)\.\w+$/, "$1")
-    )
-  );
-
-  // 全局注册组件
-  Vue.component(
-    componentName,
-    // 如果这个组件选项是通过`export default`导出的，
-    // 那么就会优先使用`.default`，
-    // 否则回退到使用模块的根。
-    componentConfig.default || componentConfig
-  );
-});
+}
 ```
 
 :::
